@@ -1,3 +1,9 @@
+2018-11-24  Charlie Zender  <zender@uci.edu>
+
+	* ncap2 exit gracefully when no output file specified with netCDF4 input file
+
+	* ncap2 exit gracefully when no -s or -S argument given
+
 2018-11-20  Charlie Zender  <zender@uci.edu>
 
 	* Correctly dereference pointer zero (i.e., NULL) passed as value of srt argument to nco_get/put_var1()
